unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/pse__Est_Vs_Actuals_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for Estimate Vs Actuals</description>
    <label>Est Vs Actuals Settings</label>
</CustomObject>