unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Adjust_Past_Est_on_Records_with_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Adjust_Past_Est_on_Records_with_Actuals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the Est Vs Actuals fields derived from the schedule (e.g., Estimated Hours) should be updated for Est Vs Actuals records that have an end date prior to the start of this week.</inlineHelpText>
    <label>Adjust Past Est on Records with Actuals</label>
    <type>Checkbox</type>
</CustomField>