unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Delete_Est_Vs_Actuals_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Est_Vs_Actuals_Batch_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Delete Est Vs Actuals Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>