unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Generate_Custom_Time_Period_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Generate_Custom_Time_Period_Records__c</fullName>
    <description>Comma separated list of time period types for which to generate EVA records</description>
    <inlineHelpText>Comma separated list of time period types for which to generate EVA records</inlineHelpText>
    <label>Generate Custom Time Period Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>