unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Generate_Monthly_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Generate_Monthly_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to generate Est Vs Actuals records by month</inlineHelpText>
    <label>Generate Monthly Records</label>
    <type>Checkbox</type>
</CustomField>