unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Generate_Weekly_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Generate_Weekly_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether to generate est vs actuals by week</inlineHelpText>
    <label>Generate Weekly Records</label>
    <type>Checkbox</type>
</CustomField>