unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Process_Out_Of_Range_Timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Process_Out_Of_Range_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Est Vs Actuals records for timecards that have hours outside of the assignment's start and end date. The Est Vs Actuals records will have zero values for estimates on these records.</description>
    <inlineHelpText>Create Est Vs Actuals records for timecards that have hours outside of the assignment's start and end date. The Est Vs Actuals records will have zero values for estimates on these records.</inlineHelpText>
    <label>Process Out Of Range Timecards</label>
    <type>Checkbox</type>
</CustomField>