unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Timecard_Statuses__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Statuses__c</fullName>
    <defaultValue>'Submitted,Approved'</defaultValue>
    <inlineHelpText>The comma-delimited list of the Timecard Status field values to use when determining if the timecard should be used in the calculation of Estimates vs Actuals</inlineHelpText>
    <label>Timecard Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>