unpackaged/main/default/objects/pse__Est_Vs_Actuals_Settings__c/fields/pse__Update_Project_Manager_Sync_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Project_Manager_Sync_Limit__c</fullName>
    <defaultValue>9000</defaultValue>
    <description>Defines the number of Est Vs Actuals records to process synchronously when updating the Project Manager field from Project. Records in excess of this value are processed in a batch. The default is 9000. Consult with Support before changing this setting.</description>
    <inlineHelpText>Defines the number of Est Vs Actuals records to process synchronously when updating the Project Manager field from Project. Records in excess of this value are processed in a batch. The default is 9000. Consult with Support before changing this setting.</inlineHelpText>
    <label>Update Project Manager Field Sync Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>